--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,17 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# dependencies
+node_modules/
+
+# production
+dist/
+
+# environment variables
+.env
+.env.*
+
+# misc
+.DS_Store
+
