--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ jiter==0.10.0
 openai==1.82.1
 pydantic==2.11.5
 pydantic_core==2.33.2
+psycopg2-binary
 python-dotenv==1.1.0
 sniffio==1.3.1
 starlette==0.46.2
