--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,7 @@ markdown-it-py==3.0.0
 mdurl==0.1.2
 mmh3==5.2.0
 multidict==6.7.0
-openai==1.82.1
+groq
 packaging==25.0
 postgrest==2.27.0
 propcache==0.4.1
