--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,11 +6,13 @@ cffi==2.0.0
 charset-normalizer==3.4.4
 click==8.1.8
 cryptography==46.0.3
+Deprecated==1.3.1
 deprecation==2.1.0
 distro==1.9.0
 exceptiongroup==1.3.0
 fastapi==0.115.12
 fsspec==2025.10.0
+groq==1.0.0
 h11==0.16.0
 h2==4.3.0
 hpack==4.1.0
@@ -19,12 +21,13 @@ httpx==0.28.1
 hyperframe==6.1.0
 idna==3.10
 jiter==0.10.0
+limits==4.2
 markdown-it-py==3.0.0
 mdurl==0.1.2
 mmh3==5.2.0
 multidict==6.7.0
-groq
-packaging==25.0
+openai==1.82.1
+packaging==24.2
 postgrest==2.27.0
 propcache==0.4.1
 psycopg2-binary==2.9.9
@@ -42,6 +45,7 @@ realtime==2.27.0
 requests==2.32.5
 rich==14.2.0
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 sortedcontainers==2.4.0
 starlette==0.46.2
@@ -58,4 +62,5 @@ typing_extensions==4.15.0
 urllib3==2.6.2
 uvicorn==0.34.2
 websockets==15.0.1
+wrapt==2.0.1
 yarl==1.22.0
